AuxiliaryProcessProxy::sendWithAsyncReply should queue up messages if sent while the process is starting like it does messages without replies https://bugs.webkit.org/show_bug.cgi?id=201746

Reviewed by Youenn Fablet.

* UIProcess/AuxiliaryProcessProxy.cpp:
(WebKit::AuxiliaryProcessProxy::sendMessage):
(WebKit::AuxiliaryProcessProxy::didFinishLaunching):
* UIProcess/AuxiliaryProcessProxy.h:
(WebKit::AuxiliaryProcessProxy::sendWithAsyncReply):



Canonical link: https://commits.webkit.org/215391@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249835 268f45cc-cd09-0410-ab3c-d52691b4dbfc