Source/WebKit/UIProcess/AuxiliaryProcessProxy.cpp
@@ -140,21 +140,29 @@ bool AuxiliaryProcessProxy::isRunningProcessPID(ProcessID pid)
 #endif
 }
 
-bool AuxiliaryProcessProxy::sendMessage(std::unique_ptr<IPC::Encoder> encoder, OptionSet<IPC::SendOption> sendOptions)
+bool AuxiliaryProcessProxy::sendMessage(std::unique_ptr<IPC::Encoder> encoder, OptionSet<IPC::SendOption> sendOptions, Optional<std::pair<CompletionHandler<void(IPC::Decoder*)>, uint64_t>>&& asyncReplyInfo)
 {
     switch (state()) {
     case State::Launching:
         // If we're waiting for the child process to launch, we need to stash away the messages so we can send them once we have a connection.
-        m_pendingMessages.append(std::make_pair(WTFMove(encoder), sendOptions));
+        m_pendingMessages.append({ WTFMove(encoder), sendOptions, WTFMove(asyncReplyInfo) });
         return true;
 
     case State::Running:
-        return connection()->sendMessage(WTFMove(encoder), sendOptions);
+        if (connection()->sendMessage(WTFMove(encoder), sendOptions)) {
+            if (asyncReplyInfo)
+                IPC::addAsyncReplyHandler(*connection(), asyncReplyInfo->second, WTFMove(asyncReplyInfo->first));
+            return true;
+        }
+        break;
 
     case State::Terminated:
-        return false;
+        break;
     }
 
+    if (asyncReplyInfo)
+        asyncReplyInfo->first(nullptr);
+    
     return false;
 }
 
@@ -200,13 +208,13 @@ void AuxiliaryProcessProxy::didFinishLaunching(ProcessLauncher*, IPC::Connection
     connectionWillOpen(*m_connection);
     m_connection->open();
 
-    for (size_t i = 0; i < m_pendingMessages.size(); ++i) {
-        std::unique_ptr<IPC::Encoder> message = WTFMove(m_pendingMessages[i].first);
-        OptionSet<IPC::SendOption> sendOptions = m_pendingMessages[i].second;
+    for (auto&& pendingMessage : std::exchange(m_pendingMessages, { })) {
+        auto encoder = WTFMove(pendingMessage.encoder);
+        auto sendOptions = pendingMessage.sendOptions;
 #if HAVE(SANDBOX_ISSUE_MACH_EXTENSION_TO_PROCESS_BY_PID)
-        if (message->messageName() == "LoadRequestWaitingForPID") {
-            auto buffer = message->buffer();
-            auto bufferSize = message->bufferSize();
+        if (encoder->messageName() == "LoadRequestWaitingForPID") {
+            auto buffer = encoder->buffer();
+            auto bufferSize = encoder->bufferSize();
             std::unique_ptr<IPC::Decoder> decoder = makeUnique<IPC::Decoder>(buffer, bufferSize, nullptr, Vector<IPC::Attachment> { });
             LoadParameters loadParameters;
             String sandboxExtensionPath;
@@ -217,10 +225,10 @@ void AuxiliaryProcessProxy::didFinishLaunching(ProcessLauncher*, IPC::Connection
             }
         }
 #endif
-        m_connection->sendMessage(WTFMove(message), sendOptions);
+        if (pendingMessage.asyncReplyInfo)
+            IPC::addAsyncReplyHandler(*connection(), pendingMessage.asyncReplyInfo->second, WTFMove(pendingMessage.asyncReplyInfo->first));
+        m_connection->sendMessage(WTFMove(encoder), sendOptions);
     }
-
-    m_pendingMessages.clear();
 }
 
 void AuxiliaryProcessProxy::shutDownProcess()
